<resources>
    <string name="app_name">HairStyler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_title">Shave Max</string>
    <string name="different_types_of_hairstyle">Different types of hairstyle</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="register_title">Create Account</string>
    <string name="register_desc">Join the HairStyler Community and Find your \nBest Suited Hairstyle</string>
    <string name="or">Or</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_title">Login Now</string>
    <string name="sign_in">Sign In</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="back">Back</string>
    <string name="gender_hint">gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_account">Account</string>
    <string name="scan_title">Upload an Image of Your Face</string>
    <string name="scan_desc">Find out the shape of your face and the type of your hair</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="scan">Scan</string>
    <string name="user_face">User Face</string>
    <string name="no_media_selected">No media selected</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="haircut_model">Haircut Model</string>
    <string name="your_hair_type_is_title">Your hair type is:</string>
    <string name="your_face_type_is_title">Your face type is:</string>
    <string name="recommended_hairstyles_title">Recommended Hairstyles</string>
    <string name="barbermap">Barbershop Near You</string>
    <string name="savedhairstyle">Saved Hairstyle</string>
    <string name="map_icon">map icon\n</string>
    <string name="arrow_icon">arrow icon</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="hello_home">Hello,</string>
    <string name="map_label">Map</string>
    <string name="scan_label">Scan</string>
    <string name="saved_label">Saved</string>
    <string name="find_hairstyles">Find Hairstyles</string>
    <string name="save_hairstyle">save hairstyle</string>
    <string name="news">News</string>
    <string name="news_thumbnail">News Thumbnail</string>
    <string name="news_nav_title">News</string>
</resources>