<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.dicoding.hairstyler.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_scanner"
        android:name="com.dicoding.hairstyler.ui.scanner.ScannerFragment"
        android:label="@string/title_scanner"
        tools:layout="@layout/fragment_scanner" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.dicoding.hairstyler.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <activity
        android:id="@+id/welcomeActivity"
        android:name="com.dicoding.hairstyler.ui.authentication.WelcomeActivity"
        android:label="activity_welcome"
        tools:layout="@layout/activity_welcome" />
    <activity
        android:id="@+id/registerActivity"
        android:name="com.dicoding.hairstyler.ui.authentication.register.RegisterActivity"
        android:label="activity_register"
        tools:layout="@layout/activity_register" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.dicoding.hairstyler.ui.authentication.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>