<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue1"
    tools:context=".ui.authentication.WelcomeActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/welcomeLogoContainer"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:layout_marginTop="132dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivWelcomeLogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/different_types_of_hairstyle"
            android:src="@drawable/welcome_logo" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/sora_extra_bold"
        android:text="@string/welcome_title"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLogoContainer" />


    <LinearLayout
        android:id="@+id/linearLayoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sora_regular"
            android:text="@string/let_s_get_started"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToRegisterPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/get_started_button_background"
            android:drawablePadding="8dp"
            android:fontFamily="@font/sora_bold"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@color/gray"
            android:text="@string/create_account"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToLoginPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_background"
            android:layout_marginHorizontal="32dp"
            android:text="@string/i_already_have_an_account"
            android:textAllCaps="false"
            android:fontFamily="@font/sora_regular"
            android:textColor="@color/blue3"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>