<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToWelcome"
        android:contentDescription="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/transparent_button_background"
        android:drawableStart="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBackToWelcome">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_bold"
            android:text="@string/login_title"
            android:textColor="@color/regular_brown"
            android:textSize="24sp" />

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sora_regular"
            android:text="@string/register_desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            android:hint="@string/email_hint"
            app:hintTextColor="@color/hint_colors">

            <com.dicoding.hairstyler.ui.customview.EmailEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/sora_light"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:boxBackgroundMode="filled"
            app:boxStrokeWidth="0dp"
            android:hint="@string/password_hint"
            app:hintTextColor="@color/hint_colors">

            <com.dicoding.hairstyler.ui.customview.PasswordEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_background"
                android:fontFamily="@font/sora_light"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/register_button_background"
            android:drawablePadding="8dp"
            android:fontFamily="@font/sora_bold"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <include
            layout="@layout/divider_with_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnToRegisterPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/transparent_button_background"
            android:layout_marginHorizontal="32dp"
            android:text="@string/i_don_t_have_an_account"
            android:textAllCaps="false"
            android:fontFamily="@font/sora_regular"
            android:textColor="@color/regular_brown"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        android:elevation="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>